// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse pattern "  " 1`] = `[]`;

exports[`parse pattern "  file" 1`] = `
[
  "**/  file",
]
`;

exports[`parse pattern " \\\\ " 1`] = `
[
  "**/  ",
]
`;

exports[`parse pattern "!" 1`] = `[]`;

exports[`parse pattern "!/" 1`] = `[]`;

exports[`parse pattern "!file" 1`] = `
[
  "!**/file",
]
`;

exports[`parse pattern "" 1`] = `[]`;

exports[`parse pattern "#file" 1`] = `[]`;

exports[`parse pattern "*(a|b|c)" 1`] = `
[
  "**/*\\(a|b|c\\)",
]
`;

exports[`parse pattern "**" 1`] = `
[
  "**/*",
]
`;

exports[`parse pattern "**/" 1`] = `
[
  "**/*/",
]
`;

exports[`parse pattern "**/dir" 1`] = `
[
  "**/dir",
]
`;

exports[`parse pattern "**/dir/" 1`] = `
[
  "**/dir/",
]
`;

exports[`parse pattern "**/dir/file" 1`] = `
[
  "**/dir/file",
]
`;

exports[`parse pattern "**/file" 1`] = `
[
  "**/file",
]
`;

exports[`parse pattern "*c" 1`] = `
[
  "**/*c",
]
`;

exports[`parse pattern "+(a|b|c)" 1`] = `
[
  "**/+\\(a|b|c\\)",
]
`;

exports[`parse pattern "/" 1`] = `[]`;

exports[`parse pattern "/**" 1`] = `
[
  "**/*",
]
`;

exports[`parse pattern "/**/" 1`] = `
[
  "**/*/",
]
`;

exports[`parse pattern "/dir" 1`] = `
[
  "dir",
]
`;

exports[`parse pattern "/dir/" 1`] = `
[
  "dir/",
]
`;

exports[`parse pattern "/dir/**" 1`] = `
[
  "dir/**/*",
]
`;

exports[`parse pattern "/dir/**/" 1`] = `
[
  "dir/**/*/",
]
`;

exports[`parse pattern "/dir/**/file" 1`] = `
[
  "dir/**/file",
]
`;

exports[`parse pattern "/dir/file" 1`] = `
[
  "dir/file",
]
`;

exports[`parse pattern "/file" 1`] = `
[
  "file",
]
`;

exports[`parse pattern "?(a|b|c)" 1`] = `
[
  "**/?\\(a|b|c\\)",
]
`;

exports[`parse pattern "@(a|b|c)" 1`] = `
[
  "**/@\\(a|b|c\\)",
]
`;

exports[`parse pattern "[[\\\\]]" 1`] = `
[
  "**/[[\\]]",
]
`;

exports[`parse pattern "[[]" 1`] = `
[
  "**/[[]",
]
`;

exports[`parse pattern "[[]]" 1`] = `
[
  "**/[[]]",
]
`;

exports[`parse pattern "[]]" 1`] = `
[
  "**/[]]",
]
`;

exports[`parse pattern "[{}()]" 1`] = `
[
  "**/[\\{\\}\\(\\)]",
]
`;

exports[`parse pattern "[a\\\\\\\\bc]" 1`] = `
[
  "**/[a\\\\bc]",
]
`;

exports[`parse pattern "[a\\\\-c]" 1`] = `
[
  "**/[a\\-c]",
]
`;

exports[`parse pattern "[a\\\\bc]" 1`] = `
[
  "**/[a\\bc]",
]
`;

exports[`parse pattern "[a-c]" 1`] = `
[
  "**/[a-c]",
]
`;

exports[`parse pattern "[abc]" 1`] = `
[
  "**/[abc]",
]
`;

exports[`parse pattern "\\\\  " 1`] = `
[
  "**/ ",
]
`;

exports[`parse pattern "\\\\!(a|b|c)" 1`] = `
[
  "**/\\!\\(a|b|c\\)",
]
`;

exports[`parse pattern "\\\\!file" 1`] = `
[
  "**/\\!file",
]
`;

exports[`parse pattern "\\\\#file" 1`] = `
[
  "**/#file",
]
`;

exports[`parse pattern "\\\\*c" 1`] = `
[
  "**/\\*c",
]
`;

exports[`parse pattern "\\\\[" 1`] = `
[
  "**/\\[",
]
`;

exports[`parse pattern "\\\\[\\\\]" 1`] = `
[
  "**/\\[\\]",
]
`;

exports[`parse pattern "\\\\[]" 1`] = `
[
  "**/\\[]",
]
`;

exports[`parse pattern "\\\\[abc" 1`] = `
[
  "**/\\[abc",
]
`;

exports[`parse pattern "\\\\[abc\\\\]" 1`] = `
[
  "**/\\[abc\\]",
]
`;

exports[`parse pattern "\\\\[abc]" 1`] = `
[
  "**/\\[abc]",
]
`;

exports[`parse pattern "{a,b,c}" 1`] = `
[
  "**/\\{a,b,c\\}",
]
`;

exports[`parse pattern "a*" 1`] = `
[
  "**/a*",
]
`;

exports[`parse pattern "a*c" 1`] = `
[
  "**/a*c",
]
`;

exports[`parse pattern "a/*/c" 1`] = `
[
  "a/*/c",
]
`;

exports[`parse pattern "a/\\\\*/c" 1`] = `
[
  "a/\\*/c",
]
`;

exports[`parse pattern "a\\\\*" 1`] = `
[
  "**/a\\*",
]
`;

exports[`parse pattern "a\\\\*c" 1`] = `
[
  "**/a\\*c",
]
`;

exports[`parse pattern "a\\\\\\\\bc" 1`] = `
[
  "**/a\\\\bc",
]
`;

exports[`parse pattern "a\\\\bc" 1`] = `
[
  "**/a\\bc",
]
`;

exports[`parse pattern "dir" 1`] = `
[
  "**/dir",
]
`;

exports[`parse pattern "dir/" 1`] = `
[
  "**/dir/",
]
`;

exports[`parse pattern "dir/file" 1`] = `
[
  "dir/file",
]
`;

exports[`parse pattern "fi  le" 1`] = `
[
  "**/fi  le",
]
`;

exports[`parse pattern "file  " 1`] = `
[
  "**/file",
]
`;

exports[`parse pattern "file \\\\ " 1`] = `
[
  "**/file  ",
]
`;

exports[`parse pattern "file" 1`] = `
[
  "**/file",
]
`;

exports[`parse pattern "file\\\\  " 1`] = `
[
  "**/file ",
]
`;

exports[`parse pattern "file\\ndir/file" 1`] = `
[
  "**/file",
  "dir/file",
]
`;

exports[`parse pattern "file\\r\\ndir/file" 1`] = `
[
  "**/file",
  "dir/file",
]
`;

exports[`parse pattern "x/!(a|b|c)" 1`] = `
[
  "x/!\\(a|b|c\\)",
]
`;

exports[`parse pattern "﻿file" 1`] = `
[
  "**/file",
]
`;

exports[`parse pattern ["/dir/**","!/dir/file"] 1`] = `
[
  "dir/**/*",
  "!dir/file",
]
`;

exports[`parse pattern ["/dir/**","!/dir/sub","!/dir/sub/file"] 1`] = `
[
  "dir/**/*",
  "!dir/sub",
  "!dir/sub/file",
]
`;

exports[`parse pattern ["/dir/**","!/dir/sub/","!/dir/sub/file"] 1`] = `
[
  "dir/**/*",
  "!dir/sub/",
  "!dir/sub/file",
]
`;

exports[`parse pattern ["/dir/**","!/dir/sub/file"] 1`] = `
[
  "dir/**/*",
  "!dir/sub/file",
]
`;

exports[`parse pattern ["/dir/**/","!/dir/sub"] 1`] = `
[
  "dir/**/*/",
  "!dir/sub",
]
`;

exports[`parse pattern ["/dir/**/","!/dir/sub/"] 1`] = `
[
  "dir/**/*/",
  "!dir/sub/",
]
`;

exports[`parse pattern ["/dir/**/","!/dir/sub/file"] 1`] = `
[
  "dir/**/*/",
  "!dir/sub/file",
]
`;
